Jann 30/objects/GS1_Country__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code_Dsp__c</fullName>
        <formula>IF(ISNUMBER(Code__c),VALUE(Code__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Country Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country_Requests_Editor__c</fullName>
        <label>Country Requests Editor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Requests_Reader__c</fullName>
        <label>Country Requests Reader</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>GS1 Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X1_Active_Countries</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1 - Active Countries</label>
    </listViews>
    <listViews>
        <fullName>X2_Inactive_Countries</fullName>
        <columns>Code_Dsp__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>2 - Inactive Countries</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS1 Countries</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>CountryAuthor__c</fullName>
        <label>Country Author</label>
    </sharingReasons>
</CustomObject>